--- a/menu.html
+++ b/menu.html
@@ -1,43 +1,52 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <title>Info_Vest</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Exercício de FLEX</title>
+        <link rel="stylesheet" href="css_menu.css">
+    </head>
 <body>
+    <div class ='falso_body'>
     <header>
         <h1>
             Vestibulares
         </h1>
     </header>
-    <h2>
+    <div class= 'linha_separar'> </div>
+    <div class="linha">
+    <div class = 'aviso'></div>
+    <h2 class = 'vestibular' >
         <a href="insper.html">
         INSPER  
     </a>
-    </h2>
-    <figure>
+    <figure class = 'imagem'>
         <img src="img/aviso.png" alt="Aviso" >
     </figure>
-
+    </h2>
+    <div class ='separador'></div>
+</div>
+    <div class= 'linha_separar'> </div>
     <h2> 
         FGV
     </h2>
-
+    <div class= 'linha_separar'> </div>
     <h2> 
         ESPM
     </h2> 
-
+    <div class= 'linha_separar'> </div>
     <h2>
         FUVEST
     </h2>
-
+    <div class= 'linha_separar'> </div>
     <h2>
         UNICAMP
     </h2>
-
+    <div class= 'linha_separar'> </div>
     <h2>
         IBMEC
     </h2>
-
+    <div class= 'linha_separar'> </div>
+</div>
 </body>
 </html>
