--- a/menu.html
+++ b/menu.html
@@ -27,23 +27,23 @@
     <div class ='separador'></div>
 </div>
     <div class= 'linha_separar'> </div>
-    <h2> 
+    <h2 class ='vestibulares'> 
         FGV
     </h2>
     <div class= 'linha_separar'> </div>
-    <h2> 
+    <h2 class ='vestibulares'> 
         ESPM
     </h2> 
     <div class= 'linha_separar'> </div>
-    <h2>
+    <h2 class ='vestibulares'>
         FUVEST
     </h2>
     <div class= 'linha_separar'> </div>
-    <h2>
+    <h2 class ='vestibulares'>
         UNICAMP
     </h2>
     <div class= 'linha_separar'> </div>
-    <h2>
+    <h2 class ='vestibulares'>
         IBMEC
     </h2>
     <div class= 'linha_separar'> </div>
