--- a/insper.html
+++ b/insper.html
@@ -2,11 +2,14 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Info_Vest</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>info_vest</title>
+    <link rel="stylesheet" href="css_insper.css">
 </head>
     <body>
-        <header>
-            <figure>
+        <div class ='falso_body'>
+        <header class="cabecario">
+            <figure  class="hamburguer">
                 <a href="hamburguer.html">
                 <img src="img/menu.png" alt="Botão de menu" >
             </a>
@@ -16,6 +19,7 @@
             </h1>
         </header>
     <main>
+        <div class='corpo'>
         <h2>
             Novos Avisos!  
         </h2>
@@ -31,9 +35,11 @@
         <h2>
             <a href="menu.html">
             Voltar  
-            <img src="img/voltar.png" alt="voltar" >
+            <img class = 'voltar' src="img/voltar.png" alt="voltar" >
             </a>
         </h2>
+    </div>
     </main>
+</div>
     </body>
 </html>
