--- a/datas.html
+++ b/datas.html
@@ -3,34 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Info_Vest</title>
+    <link rel="stylesheet" href="css_datas.css">
 </head>
 <body>
-    <header>
-        <figure>
-            <a href="hamburguer.html">
-            <img src="img/menu.png" alt="Botão de menu" >
-        </a>
-        </figure>
-        <h1>
-            Insper
-        </h1>
-    </header>
-    <main>
-        <h2>
-            Datas!  
-        </h2>
-        <li>
-            25/06/2021
-        </li>
-        <p>
-            Nessa data, será a 1ª fase do vestibular do insper
-        </p>
-        <li>
-            28/07/2021
-        </li>
-        <p>
-            Nessa data, será a 2ª fase do vestibular do insper
-        </p>  
-    </main>
+    <div class="falso_body">
+        <header class="cabecario">
+            <figure>
+                <a href="hamburguer.html">
+                <img class="hamburguer" src="img/menu.png" alt="Botão de menu" >
+            </a>
+            </figure>
+            <h1>
+                Insper
+            </h1>
+        </header>
+        <main>
+            <div class="body">
+                <h2 class="title">
+                    Datas!  
+                </h2>
+                <div class="quadrado">
+                    <li>
+                        25/06/2021
+                    </li>
+                    <p>
+                        Nessa data, será a 1ª fase do vestibular do insper 
+                    </p>
+                    <div class= 'linha_separar'> </div>
+                    <li>
+                        28/07/2021
+                    </li>
+                    <p>
+                        Nessa data, será a 2ª fase do vestibular do insper
+                    </p>  
+                </div>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
