--- a/insper.html
+++ b/insper.html
@@ -8,10 +8,10 @@
 </head>
     <body>
         <div class ='falso_body'>
-        <header class="cabecario">
-            <figure  class="hamburguer">
+        <header class ='cabecario'>
+            <figure>
                 <a href="hamburguer.html">
-                <img src="img/menu.png" alt="Botão de menu" >
+                <img   class="hamburguer" src="img/menu.png" alt="Botão de menu" >
             </a>
             </figure>
             <h1>
@@ -26,18 +26,19 @@
         <p>
         O vestibular mudou agora sera realizado Online
         </p>
+        <div class= 'linha_separar'> </div>
         <h2>
             Outros Avisos!  
         </h2>
         <p>
             O vestibular é realizado pelo Insper
         </p>
-        <h2>
-            <a href="menu.html">
-            Voltar  
-            <img class = 'voltar' src="img/voltar.png" alt="voltar" >
+            <a href="menu.html"  class="retorno">
+            <h2>
+                Voltar  
+            </h2>
+                <img class = 'voltar' src="img/voltar.png" alt="voltar" >
             </a>
-        </h2>
     </div>
     </main>
 </div>
