--- a/status.html
+++ b/status.html
@@ -3,25 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Info_Vest</title>
+    <link rel="stylesheet" href="css_status.css">
 </head>
 <body>
-    <header>
-        <figure>
-        <a href="hamburguer.html">
-        <img src="img/menu.png" alt="Botão de menu" >
-        </a>
-        </figure>
-        <h1>
-            Insper
-        </h1>
-    </header>
-    <main>
-        <h2>
-            Status!
-        </h2>
-        <p>
-            Você precisa realizar o pagamento.
-        </p>
-    </main>
+    <div class="falso_body">
+        <header class="cabecario">
+            <figure>
+            <a href="hamburguer.html">
+            <img class="hamburguer" src="img/menu.png" alt="Botão de menu" >
+            </a>
+            </figure>
+            <h1>
+                Insper
+            </h1>
+        </header>
+        <main>
+            <div class="quadrado">
+                <h2 class="cabecario">
+                    Status!
+                </h2>
+                <p>
+                    Você precisa realizar o pagamento.
+                </p>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
