--- a/status.html
+++ b/status.html
@@ -18,10 +18,10 @@
             </h1>
         </header>
         <main>
+            <h2 class="title">
+                Status!
+            </h2>
             <div class="quadrado">
-                <h2 class="cabecario">
-                    Status!
-                </h2>
                 <p>
                     Você precisa realizar o pagamento.
                 </p>
