--- a/estudo.html
+++ b/estudo.html
@@ -1,39 +1,46 @@
 <!DOCTYPE html>
-
 <html lang="pt-BR">
-
 <head>
-
     <meta charset="UTF-8">
-
-    <title>Info_Vest</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exercício de FLEX</title>
+    <link rel="stylesheet" href="css_estudo.css">
 </head>
-
-<body>
-
-    <header>
-
-        <h1>
+    <body>
+        <div class ='falso_body'>
+        <header class="cabecario"> 
+            <figure>
                 <a href="hamburguer.html">
-                <img src="img/menu.png" alt="Botão de menu" >
-                </a>           
-            Estudos!
-        </h1>
-    </header>
-    <h2>
-        matemática  
-    </h2>
-    <p>
-       fatoração, matemática financeira, .....
-    </p>
-    <h2>
-        Português  
-    </h2>
-    <p>
-        sujeito, interpretação de texto, .....    
-    </p>
-
-</body>
+                <img class="hamburguer" src="img/menu.png" alt="Botão de menu" >
+            </a>
+            </figure>
+            <h1>
+                Insper
+            </h1>
+        </header>
+    <main>
+        <div class='corpo'>
+            <h2 class="title">
+                Estudos  
+            </h2>
+            <div class="quadrado">
+                <h2>
+                    Matemática  
+                </h2>
+                <p>
+                    fatoração, matemática financeira, .....
+                </p>
+                <div class= 'linha_separar'> </div>
+                <h2>
+                    Português  
+                </h2>
+                <p>
+                    sujeito, interpretação de texto, .....    
+                </p>
+            </div>
+        </div>
+    </main>
+</div>
+    </body>
 
 </html>
