--- a/regras.html
+++ b/regras.html
@@ -2,26 +2,33 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Info_Vest</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Exercício de FLEX</title>
+        <link rel="stylesheet" href="css_regras.css">
 </head>
 <body>
-    <header>
-        <figure>
+    <div class ='falso_body'>
+    <header class="cabecario">
+    
+        <figure>     
             <a href="hamburguer.html">
-            <img src="img/menu.png" alt="Botão de menu" >
+            <img  class="hamburguer" src="img/menu.png" alt="Botão de menu" >
         </a>
         </figure>
-        <h1>
+        <h1 class = 'vestibular' >
             Insper
         </h1>
     </header>
     <main>
-        <h2>
+        <h2 class="regras">
             Regras!  
         </h2>
+        <div class="quadrado">
         <p>
         O vestibular do Insper exige a instalação de um software chamado PiBrowser. Não será permitido o uso de lápis e papel.
         </p>
+    </div>
     </main>
+</div>
 </body>
 </html>
