--- a/datas.html
+++ b/datas.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Info_Vest</title>
+    <link rel="stylesheet" href="css_reset.css">
     <link rel="stylesheet" href="css_datas.css">
 </head>
 <body>
@@ -22,21 +23,21 @@
                 <h2 class="title">
                     Datas!  
                 </h2>
-                <div class="quadrado">
+                    <ol class="quadrado">
                     <li>
                         25/06/2021
                     </li>
-                    <p>
+                    <li>
                         Nessa data, será a 1ª fase do vestibular do insper 
-                    </p>
-                    <div class= 'linha_separar'> </div>
+                    </li>
+                    <li class= 'linha_separar'> </li>
                     <li>
                         28/07/2021
                     </li>
-                    <p>
+                    <li>
                         Nessa data, será a 2ª fase do vestibular do insper
-                    </p>  
-                </div>
+                    </li>  
+                </ol>
             </div>
         </main>
     </div>
