--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Exercício de FLEX</title>
+            <link rel="stylesheet" href="css_reset.css">
         <link rel="stylesheet" href="css_menu.css">
     </head>
 <body>
@@ -16,14 +17,16 @@
     <div class= 'linha_separar'> </div>
     <div class="linha">
     <div class = 'aviso'></div>
-    <h2 class = 'vestibular' >
+    <div class = 'vestibular'>
+    <h2 >
         <a href="insper.html">
         INSPER  
     </a>
-    <figure class = 'imagem'>
-        <img src="img/aviso.png" alt="Aviso" >
-    </figure>
     </h2>
+        <figure class = 'imagem'>
+            <img src="img/aviso.png" alt="Aviso" >
+        </figure>
+</div>
     <div class ='separador'></div>
 </div>
     <div class= 'linha_separar'> </div>
