--- a/estudo.html
+++ b/estudo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício de FLEX</title>
+    <link rel="stylesheet" href="css_reset.css">
     <link rel="stylesheet" href="css_estudo.css">
 </head>
     <body>
