--- a/hamburguer.html
+++ b/hamburguer.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>info_vest</title>
+    <link rel="stylesheet" href="css_reset.css">
     <link rel="stylesheet" href="css_hamburguer.css">
 <body>
     <div class="falso_body">
@@ -46,6 +47,6 @@
         </h2>
     </div>
     </main>
-</body>
 </div>
+</body>
 </html>
