--- a/insper.html
+++ b/insper.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>info_vest</title>
+    <link rel="stylesheet" href="css_reset.css">
     <link rel="stylesheet" href="css_insper.css">
 </head>
     <body>
