--- a/status.html
+++ b/status.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Info_Vest</title>
+    <link rel="stylesheet" href="css_reset.css">
     <link rel="stylesheet" href="css_status.css">
 </head>
 <body>
