--- a/html/insper.html
+++ b/html/insper.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>info_vest</title>
-    <link rel="stylesheet" href="css_reset.css">
-    <link rel="stylesheet" href="css_insper.css">
+    <link rel="stylesheet" href="css/css_reset.css">
+    <link rel="stylesheet" href="css/css_insper.css">
 </head>
     <body>
         <div class ='falso_body'>
