--- a/html/datas.html
+++ b/html/datas.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Info_Vest</title>
-    <link rel="stylesheet" href="css_reset.css">
-    <link rel="stylesheet" href="css_datas.css">
+    <link rel="stylesheet" href="css/css_reset.css">
+    <link rel="stylesheet" href="css/css_datas.css">
 </head>
 <body>
     <div class="falso_body">
