--- a/html/hamburguer.html
+++ b/html/hamburguer.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>info_vest</title>
-    <link rel="stylesheet" href="css_reset.css">
-    <link rel="stylesheet" href="css_hamburguer.css">
+    <link rel="stylesheet" href="css/css_reset.css">
+    <link rel="stylesheet" href="css/css_hamburguer.css">
 <body>
     <div class="falso_body">
     <header class="cabecario">
