--- a/html/menu.html
+++ b/html/menu.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Exercício de FLEX</title>
-            <link rel="stylesheet" href="css_reset.css">
-        <link rel="stylesheet" href="css_menu.css">
+            <link rel="stylesheet" href="css/css_reset.css">
+        <link rel="stylesheet" href="css/css_menu.css">
     </head>
 <body>
     <div class ='falso_body'>
