--- a/html/datas.html
+++ b/html/datas.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Info_Vest</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/css_reset.css">
     <link rel="stylesheet" href="css/css_datas.css">
 </head>
 <body>
     <div class="falso_body">
-        <header class="cabecario">
+        <header>
             <figure>
                 <a href="hamburguer.html">
                 <img class="hamburguer" src="img/menu.png" alt="Botão de menu" >
