--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Exercício de FLEX</title>
             <link rel="stylesheet" href="css/css_reset.css">
-        <link rel="stylesheet" href="css/css_menu.css">
+        <link rel="stylesheet" href="css/css_index.css">
     </head>
 <body>
     <div class ='falso_body'>
@@ -16,38 +16,45 @@
     </header>
     <div class= 'linha_separar'> </div>
     <div class="linha">
-    <div class = 'aviso'></div>
     <div class = 'vestibular'>
     <h2 >
         <a href="insper.html">
-        INSPER  
+        INSPER 
     </a>
     </h2>
-        <figure class = 'imagem'>
-            <img src="img/aviso.png" alt="Aviso" >
-        </figure>
+         <img class ='imagem' src="img/aviso.png" alt="Aviso" >
 </div>
     <div class ='separador'></div>
 </div>
     <div class= 'linha_separar'> </div>
     <h2 class ='vestibulares'> 
+        <a href=#>
         FGV
+    </a>
     </h2>
     <div class= 'linha_separar'> </div>
     <h2 class ='vestibulares'> 
+        <a href=#>
         ESPM
+        </a>
     </h2> 
     <div class= 'linha_separar'> </div>
     <h2 class ='vestibulares'>
+        <a href=#>
         FUVEST
+    </a>
     </h2>
     <div class= 'linha_separar'> </div>
     <h2 class ='vestibulares'>
+        <a href=#>
         UNICAMP
+    </a>
     </h2>
     <div class= 'linha_separar'> </div>
     <h2 class ='vestibulares'>
+        <a href=#>
         IBMEC
+    </a>
     </h2>
     <div class= 'linha_separar'> </div>
 </div>
