--- a/html/insper.html
+++ b/html/insper.html
@@ -9,7 +9,7 @@
 </head>
     <body>
         <div class ='falso_body'>
-        <header class ='cabecario'>
+        <header>
             <figure>
                 <a href="hamburguer.html">
                 <img   class="hamburguer" src="img/menu.png" alt="Botão de menu" >
@@ -34,7 +34,7 @@
         <p>
             O vestibular é realizado pelo Insper
         </p>
-            <a href="menu.html"  class="retorno">
+            <a href="index.html"  class="retorno">
             <h2>
                 Voltar  
             </h2>
