--- a/html/regras.html
+++ b/html/regras.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class ='falso_body'>
-    <header class="cabecario">
+    <header>
     
         <figure>     
             <a href="hamburguer.html">
