--- a/html/estudo.html
+++ b/html/estudo.html
@@ -9,7 +9,7 @@
 </head>
     <body>
         <div class ='falso_body'>
-        <header class="cabecario"> 
+        <header> 
             <figure>
                 <a href="hamburguer.html">
                 <img class="hamburguer" src="img/menu.png" alt="Botão de menu" >
