--- a/html/estudo.html
+++ b/html/estudo.html
@@ -6,6 +6,9 @@
     <title>Exercício de FLEX</title>
     <link rel="stylesheet" href="css/css_reset.css">
     <link rel="stylesheet" href="css/css_estudo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&family=Hind&display=swap" rel="stylesheet">
 </head>
     <body>
         <div class ='falso_body'>
