--- a/html/hamburguer.html
+++ b/html/hamburguer.html
@@ -5,6 +5,9 @@
     <title>info_vest</title>
     <link rel="stylesheet" href="css/css_reset.css">
     <link rel="stylesheet" href="css/css_hamburguer.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&family=Hind&display=swap" rel="stylesheet">
 <body>
     <div class="falso_body">
     <header class="cabecario">
