--- a/html/index.html
+++ b/html/index.html
@@ -4,8 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Exercício de FLEX</title>
-            <link rel="stylesheet" href="css/css_reset.css">
+        <link rel="stylesheet" href="css/css_reset.css">
         <link rel="stylesheet" href="css/css_index.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&family=Hind&display=swap" rel="stylesheet">
     </head>
 <body>
     <div class ='falso_body'>
