--- a/html/insper.html
+++ b/html/insper.html
@@ -6,6 +6,9 @@
     <title>info_vest</title>
     <link rel="stylesheet" href="css/css_reset.css">
     <link rel="stylesheet" href="css/css_insper.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&family=Hind&display=swap" rel="stylesheet">
 </head>
     <body>
         <div class ='falso_body'>
