--- a/html/hamburguer.html
+++ b/html/hamburguer.html
@@ -9,43 +9,43 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&family=Hind&display=swap" rel="stylesheet">
 <body>
-    <div class="falso_body">
-    <header class="cabecario">
+    <div class="falso_body2">
+    <header class="cabecario2">
         <h1>
             Menu
         </h1>
     </header>
     <main>
-        <div class="quadrado">
-        <h2 class="listagem">
+        <div class="quadrado2">
+        <h2 class="listagem2">
             <a href="estudo.html">
             Estudo  
-            <img class = 'icone' src="img/livro.png" alt="Estudo" >
+            <img class = 'icone2' src="img/livro.png" alt="Estudo" >
             </a>
         </h2>
-        <h2  class="listagem">
+        <h2  class="listagem2">
             <a href="regras.html">
             Regras  
-            <img class = 'icone' src="img/regras.png" alt="regras" >
+            <img class = 'icone2' src="img/regras.png" alt="regras" >
             </a>
         </h2>
     
-        <h2  class="listagem">
+        <h2  class="listagem2">
             <a href="datas.html">
             Datas  
-            <img class = 'icone' src="img/datas.png" alt="datas" >
+            <img class = 'icone2' src="img/datas.png" alt="datas" >
             </a>
         </h2>
-        <h2  class="listagem">
+        <h2  class="listagem2">
             <a href="status.html">
             Status  
-            <img class = 'icone' src="img/status.png" alt="status" >
+            <img class = 'icone2' src="img/status.png" alt="status" >
             </a>
         </h2>
         <h2  >
             <a href="insper.html">
             Voltar  
-            <img  class = 'voltar' src="img/voltar.png" alt="voltar" >
+            <img  class = 'voltar2' src="img/voltar.png" alt="voltar" >
             </a>
         </h2>
     </div>
