--- a/html/status.html
+++ b/html/status.html
@@ -9,12 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&family=Hind&display=swap" rel="stylesheet">
+    <script src="js/js.js"></script>
 </head>
 <body>
     <div class="falso_body">
         <header>
             <figure>
-            <a href="hamburguer.html">
+            <a>
             <img class="hamburguer" src="img/menu.png" alt="Botão de menu" >
             </a>
             </figure>
@@ -34,4 +35,43 @@
         </main>
     </div>
 </body>
+<div class="falso_body2">
+    <header class="cabecario2">
+    </header>
+    <main>
+        <div class="quadrado2">
+        <h2 class="listagem2">
+            <a href="estudo.html">
+            Estudo  
+            <img class = 'icone2' src="img/livro.png" alt="Estudo" >
+            </a>
+        </h2>
+        <h2  class="listagem2">
+            <a href="regras.html">
+            Regras  
+            <img class = 'icone2' src="img/regras.png" alt="regras" >
+            </a>
+        </h2>
+    
+        <h2  class="listagem2">
+            <a href="datas.html">
+            Datas  
+            <img class = 'icone2' src="img/datas.png" alt="datas" >
+            </a>
+        </h2>
+        <h2  class="listagem2">
+            <a href="status.html">
+            Status  
+            <img class = 'icone2' src="img/status.png" alt="status" >
+            </a>
+        </h2>
+        <h2  >
+            <a href="insper.html">
+            Voltar  
+            <img  class = 'voltar2' src="img/voltar.png" alt="voltar" >
+            </a>
+        </h2>
+    </div>
+    </main>
+</div>
 </html>
