--- a/html/datas.html
+++ b/html/datas.html
@@ -46,11 +46,11 @@
             </div>
         </main>
     </div>
-</body>
+
 <div class="falso_body2">
     <header class="cabecario2">
     </header>
-    <main>
+    <section>
         <div class="quadrado2">
         <h2 class="listagem2">
             <a href="estudo.html">
@@ -84,6 +84,7 @@
             </a>
         </h2>
     </div>
-    </main>
+    </section>
 </div>
+</body>
 </html>
