--- a/html/estudo.html
+++ b/html/estudo.html
@@ -26,7 +26,7 @@
     <main>
         <div class='corpo'>
             <h2 class="title">
-                Estudos  
+                Estudos! 
             </h2>
             <div class="quadrado">
                 <h2>
@@ -46,11 +46,11 @@
         </div>
     </main>
 </div>
-    </body>
+
     <div class="falso_body2">
         <header class="cabecario2">
         </header>
-        <main>
+        <section>
             <div class="quadrado2">
             <h2 class="listagem2">
                 <a href="estudo.html">
@@ -84,7 +84,7 @@
                 </a>
             </h2>
         </div>
-        </main>
+        </section>
     </div>
-
+</body>
 </html>
