--- a/html/regras.html
+++ b/html/regras.html
@@ -35,11 +35,11 @@
     </div>
     </main>
 </div>
-</body>
+
 <div class="falso_body2">
     <header class="cabecario2">
     </header>
-    <main>
+    <section>
         <div class="quadrado2">
         <h2 class="listagem2">
             <a href="estudo.html">
@@ -73,6 +73,7 @@
             </a>
         </h2>
     </div>
-    </main>
+    </section>
 </div>
+</body>
 </html>
