--- a/html/status.html
+++ b/html/status.html
@@ -34,11 +34,11 @@
             </div>
         </main>
     </div>
-</body>
+
 <div class="falso_body2">
     <header class="cabecario2">
     </header>
-    <main>
+    <section>
         <div class="quadrado2">
         <h2 class="listagem2">
             <a href="estudo.html">
@@ -72,6 +72,7 @@
             </a>
         </h2>
     </div>
-    </main>
+    </section>
 </div>
+</body>
 </html>
