--- a/html/insper.html
+++ b/html/insper.html
@@ -50,11 +50,11 @@
     </div>
     </main>
 </div>
-    </body>
+    
     <div class="falso_body2">
         <header class="cabecario2">
         </header>
-        <main>
+        <section>
             <div class="quadrado2">
             <h2 class="listagem2">
                 <a href="estudo.html">
@@ -88,6 +88,7 @@
                 </a>
             </h2>
         </div>
-        </main>
+        </section>
     </div>
+</body>
 </html>
