--- a/status.html
+++ b/status.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Info_Vest</title>
+    <title>Info Vest</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/css_reset.css">
     <link rel="stylesheet" href="css/css_status.css">
