--- a/insper.html
+++ b/insper.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>info_vest</title>
+    <title>Info Vest</title>
     <link rel="stylesheet" href="css/css_reset.css">
     <link rel="stylesheet" href="css/css_insper.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
